# nd608-apply-lightweight-fine-tuning-to-a-foundation-model

./: LightweightFineTuning.html  LightweightFineTuning.ipynb  README.md  pyproject.toml
nd608/gpt2-lora/: adapter_config.json
nd608/gpt2-lora/checkpoint-1000/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
nd608/gpt2-lora/checkpoint-1500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
nd608/gpt2-lora/checkpoint-500/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
