[tool.poetry]
name = "nd608-apply-lightweight-fine-tuning-to-a-foundation-model"
version = "0.1.0"
description = ""
authors = ["Agustin Barto <abarto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
torch = "^2.2.1"
transformers = "^4.38.2"
peft = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
